--- a/server/package.json
+++ b/server/package.json
@@ -15,6 +15,7 @@
     "jquery": "^3.1.1",
     "mongoose": "^4.8.4",
     "mongoose-paginate": "^5.0.3",
-    "nodemailer": "^3.1.3"
+    "nodemailer": "^3.1.3",
+    "tunnel-ssh": "^4.1.2"
   }
 }
