--- a/client/package.json
+++ b/client/package.json
@@ -33,6 +33,7 @@
     "@angular/platform-browser": "~2.4.0",
     "@angular/platform-browser-dynamic": "~2.4.0",
     "@angular/router": "~3.4.0",
+    "angular-chosen-localytics": "^1.6.0",
     "angular-in-memory-web-api": "~0.2.4",
     "chosen-js": "^1.7.0",
     "core-js": "^2.4.1",
