--- a/server/package.json
+++ b/server/package.json
@@ -16,6 +16,7 @@
     "mongoose": "^4.8.4",
     "mongoose-paginate": "^5.0.3",
     "nodemailer": "^3.1.3",
+    "promise-async": "^0.2.0",
     "request": "^2.81.0",
     "tunnel-ssh": "^4.1.2"
   },
