--- a/client/package.json
+++ b/client/package.json
@@ -35,6 +35,7 @@
     "@angular/router": "~3.4.0",
     "angular-chosen-localytics": "^1.6.0",
     "angular-in-memory-web-api": "~0.2.4",
+    "angular2-social-login": "^3.0.0",
     "chosen-js": "^1.7.0",
     "core-js": "^2.4.1",
     "ng2-sticky": "^0.5.0",
