--- a/client/package.json
+++ b/client/package.json
@@ -40,6 +40,7 @@
     "core-js": "^2.4.1",
     "ng2-sticky": "^0.5.0",
     "ng2-sticky-kit": "^2.0.3",
+    "ngx-rating": "0.0.9",
     "rxjs": "5.0.1",
     "systemjs": "0.19.40",
     "zone.js": "^0.7.4"
