--- a/client/package.json
+++ b/client/package.json
@@ -38,6 +38,7 @@
     "angular2-social-login": "^3.0.0",
     "chosen-js": "^1.7.0",
     "core-js": "^2.4.1",
+    "ng2-auto-complete": "^0.12.0",
     "ngx-rating": "0.0.9",
     "rxjs": "5.0.1",
     "systemjs": "0.19.40",
