--- a/admin/client/package.json
+++ b/admin/client/package.json
@@ -38,6 +38,7 @@
     "angular2-chartjs": "^0.2.0",
     "core-js": "^2.4.1",
     "hammerjs": "^2.0.8",
+    "ng2-auto-complete": "^0.12.0",
     "rxjs": "5.0.1",
     "systemjs": "0.19.40",
     "zone.js": "^0.8.4"
